--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-The IS-2 and other Russian tanks that are meant to left be, and shall not be abused or murdered unlawfully.
+The IS-2 and other Russian tanks are meant to left be, and shall not be abused or murdered unlawfully.
